feat: alteracoes finais

--- a/estruturadehypertexto.html
+++ b/estruturadehypertexto.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <a href="index.html">Índice</a>
+    <h1>Estrutura do HTML</h1>
+    <p>O documento html se divide em duas grandes partes, o head, que em português seria a cabeça, e o body que seria o corpo.</p>
+    <ol>
+        <li>Head
+            <p> <i>Head</i> é a parte inicial onde se encontram os metadados, o idioma daquela página e seu título, esse último se refere ao nome que aparecerá na aba do navegador quando acessarmos aquela página.</p>
+        </li>
+        <li>Body
+            <p><i>body</i>Já o , que significa corpo é a tag abaixo do head, é no body que fica a <strong>principal do conteúdo da página</strong> .</p>
+        </li>
+    </ol>
 </body>
 </html>
