--- a/clients.html
+++ b/clients.html
@@ -9,7 +9,8 @@
 <body>
     <a href="index.html">Índice</a>
     <h1><strong>O que são clients?</strong></h1>
-    <p>Segundo a Wikipedia, <strong>Clients</strong> é um termo empregado em computação e representa uma entidade que consome os serviços de uma outra entidade servidora, em geral através do uso de uma rede de computadores numa arquitetura cliente-servidor. Em outras palavras,
+    <p>Segundo a Wikipedia, <strong>Clients</strong> é um termo empregado em computação e representa uma entidade que consome os serviços de uma outra entidade servidora, em geral através do uso de uma rede de 
+        computadores numa arquitetura cliente-servidor. Em outras palavras,
     client é a parte do <i>usuário</i>, o que vê o produto final, em termos econômicos seria o consumidor final do produto, que é o software desenvolvido, o apllicativo ou site.</p>
 </body>
 </html>
